--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,9 @@ jobs:
         run: npm ci
       
       - name: Build with Next.js
-        run: npm run build
+        run: npm run build:github
+        env:
+          DEPLOYMENT_TYPE: github-pages
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
