--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "build:github": "DEPLOYMENT_TYPE=github-pages next build",
     "build:cloudways": "DEPLOYMENT_TYPE=cloudways next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "next lint",
     "export": "DEPLOYMENT_TYPE=github-pages next build"
   },
