--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "build:github": "DEPLOYMENT_TYPE=github-pages next build",
-    "build:cloudways": "DEPLOYMENT_TYPE=cloudways next build",
+    "build:github": "cross-env DEPLOYMENT_TYPE=github-pages next build",
+    "build:cloudways": "cross-env DEPLOYMENT_TYPE=cloudways next build",
     "start": "next start -p $PORT",
     "lint": "next lint",
-    "export": "DEPLOYMENT_TYPE=github-pages next build"
+    "export": "cross-env DEPLOYMENT_TYPE=github-pages next build"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.0",
@@ -36,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
+    "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
