Fix Cloudways deployment: Configure for static website hosting with proper Apache config and image path fixes

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:github": "DEPLOYMENT_TYPE=github-pages next build",
     "build:cloudways": "DEPLOYMENT_TYPE=cloudways next build",
     "build:prod": "NODE_ENV=production DEPLOYMENT_TYPE=cloudways next build",
-    "start": "NODE_ENV=production next start",
+    "start": "NODE_ENV=production next start -p $PORT",
     "lint": "next lint",
     "export": "DEPLOYMENT_TYPE=github-pages next build"
   },
