--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "build:github": "DEPLOYMENT_TYPE=github-pages next build",
-    "build:cloudways": "DEPLOYMENT_TYPE=cloudways next build",
-    "build:prod": "NODE_ENV=production DEPLOYMENT_TYPE=cloudways next build",
-    "start": "NODE_ENV=production next start -p $PORT",
+    "build:vercel": "DEPLOYMENT_TYPE=vercel next build",
+    "build:prod": "NODE_ENV=production DEPLOYMENT_TYPE=vercel next build",
+    "start": "next start",
     "lint": "next lint",
     "export": "DEPLOYMENT_TYPE=github-pages next build"
   },
