--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
   "framework": "nextjs",
-  "buildCommand": "npm run build:vercel",
+  "buildCommand": "npm run build",
   "installCommand": "npm install",
-  "devCommand": "npm run dev",
-  "outputDirectory": "out"
+  "devCommand": "npm run dev"
 } 
